@@ -15,9 +15,10 @@ var Client = Class(function() {
 			|| (this.isSafari = this._isClient('Safari', 'Version'))
 		
 		if (this.isSafari) {
-			(this.isIPhone = this._isClient('iPhone', 'Version'))
-				|| (this.isIPad = this._isClient('iPad', 'Version'))
-				|| (this.isIPod = this._isClient('iPod', 'Version'))
+			(this.isIPhone = this._isClient('iPhone', 'Version', true))
+				|| (this.isIPad = this._isClient('iPad', 'Version', true))
+				|| (this.isIPod = this._isClient('iPod', 'Version', true))
+				|| (this.isAndroid = this._isClient('Android', 'Version', true))
 		}
 	}
 	
@@ -34,13 +35,14 @@ var Client = Class(function() {
 		return this.isIE && (!doc.compatMode || doc.compatMode == 'BackCompat')
 	}
 	
-	this._isClient = function(name, versionString) {
+	this._isClient = function(name, versionString, isMobile) {
 		var agent = this._userAgent,
 			index = agent.indexOf(name)
 		if (index < 0) { return false }
 		if (versionString) { index = agent.indexOf(versionString) }
 		this.version = parseFloat(agent.substr(index + (versionString || name).length + 1))
 		this.name = name
+		this.isMobile = isMobile
 		return true
 	}
 	
